--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: bdutilities
-Title: Reusable Supporting Functions Across the bdverse.
+Title: Reusable Supporting Functions Across the bdverse
+Description: Reusable Supporting Functions Across the bdverse.
 Version: 0.0.1
 License: GPL-3
-Date: 2019-05-14
+Date: 2019-10-13
 Authors@R: c(
     person(
         "Thiloshon", "Nagarajah",
@@ -12,7 +13,7 @@ Authors@R: c(
         "Tomer", "Gueta", 
         email = "tomer.gu@gmail.com",
         role = c("aut"),
-        comment = c(ORCID = '0000-0003-1557-8596'))
+        comment = c(ORCID = '0000-0003-1557-8596')))
 Maintainer: Thiloshon Nagarajah <thiloshon@gmail.com>
 URL: https://github.com/bd-R/bdutilities, https://bd-r.github.io/The-bdverse/index.html
 BugReports: https://github.com/bd-R/bdutilities/issues
