--- a/.github/workflows/Level 0 CI.yml
+++ b/.github/workflows/Level 0 CI.yml
@@ -31,7 +31,7 @@ jobs:
     needs: R-CMD-check
     strategy:
       matrix:
-        repo: ['bd-R/bdutilities', 'bd-R/bdDwC', 'bd-R/bdchecks']
+        repo: ['bd-R/bdverse', 'bd-R/bdDwC', 'bd-R/bdchecks']
     runs-on: ubuntu-latest
     steps:
       - name: Repository Dispatch
