--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,8 @@
 Package: bdutilities
 Title: Reusable Supporting Functions Across the bdverse
 Description: Reusable Supporting Functions Across the bdverse.
-Version: 0.0.4
+Version: 0.0.5
+Date: 2021-07-11
 License: GPL-3
 Authors@R: c(
     person(
