--- a/.github/workflows/Mac-Dev-Dev.yml
+++ b/.github/workflows/Mac-Dev-Dev.yml
@@ -64,6 +64,8 @@ jobs:
             eval sudo $cmd
           done < <(Rscript -e 'cat(remotes::system_requirements("ubuntu", "20.04"), sep = "\n")')
       - name: Install dependencies
+        env:
+          GITHUB_PAT: ${{ secrets.REPO_ACCESS_TOKEN }}
         run: |
           remotes::install_deps(dependencies = TRUE)
           # Your "dev" dependencies go here
