--- a/.github/workflows/Mac-Dev-Dev.yml
+++ b/.github/workflows/Mac-Dev-Dev.yml
@@ -30,7 +30,6 @@ jobs:
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
       RSPM: ${{ matrix.config.rspm }}
-      GITHUB_PAT: ${{ secrets.REPO_ACCESS_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
@@ -65,7 +64,7 @@ jobs:
           done < <(Rscript -e 'cat(remotes::system_requirements("ubuntu", "20.04"), sep = "\n")')
       - name: Install dependencies
         env:
-          GITHUB_PAT: ${{ secrets.REPO_ACCESS_TOKEN }}
+          GITHUB_PAT: ${{ secrets.SYNCWORKFLOW }}
         run: |
           remotes::install_deps(dependencies = TRUE)
           # Your "dev" dependencies go here
