--- a/.github/workflows/Multi-CI-Dev-Dev.yml
+++ b/.github/workflows/Multi-CI-Dev-Dev.yml
@@ -107,7 +107,7 @@ jobs:
           Rscript -e "remotes::install_github('ropensci/tic')" -e "print(tic::dsl_load(path='tic-dev.R'))" -e "tic::prepare_all_stages()" -e "tic::before_install()" -e "tic::install()"
 
       - name: "[Stage] Script"
-        run: Rscript -e "tic::script()"
+        run: Rscript -e "tic::script(stages = dsl_load(path='tic-dev.R'))"
 
       - name: "[Stage] After Success"
         if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'release'
